--- a/desktop-base/src/test/resources/log4j.properties
+++ b/desktop-base/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Application
-log4j.logger.org.example.test=TRACE, CONSOLE
+log4j.logger.org.desktop.base=TRACE, CONSOLE
 
 
 # Command Line Console Configuration
